syntax = "proto2";
package main;
option csharp_namespace = "Interception.OpenTracing.MetricProxy";
option go_package = ".;main";

message TraceMetric {
  required string Type = 1;
  required double Value = 2;
  required string TraceId = 3;
  required string SpanId = 4;
  optional string ParentSpanId = 5;
  required string Service = 6;
  required double StartDate = 7;
  required double FinishDate = 8;
  message Tag {
    required string Name = 1;
    required string value = 2;
  }
  repeated Tag Tags = 9;
}
